--- a/video.html
+++ b/video.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>JavaScript Video Controls</title>
 	<script src = "js/video.js"></script>
 	<style>
@@ -16,8 +17,8 @@
 	button{
 		margin-bottom: 5px;
 	}
-
 	/*Use CSS before property to display the image before the text in the buttons*/
+	
 	
 </style>
 </head>
